@@ -1,4 +1,5 @@
 DIST KontrolPack-2.0.3.tar.gz 535788 RMD160 0bc2a876898b82b5f7be996942c13100995f06c8 SHA1 c6fcc51fa6f9d2683190c4b4abbb665724193a46 SHA256 c614bfff9d5a426bad103058756e9f8a28e3c1a265dfa0c9156015c131067674
 EBUILD kontrolpack-2.0.3.ebuild 985 RMD160 c839f8cb1b3a4e215f9e0d142cedf23c3064f4b3 SHA1 4836e44c257b3ba50e461ee4b7b72f8a33749f00 SHA256 25107a13d06a3ff76fe5e4db68805575973d8c54f6b812c22e22399eb0bccbbf
-MISC ChangeLog 811 RMD160 bc755b9d1f2bffc9f02e0fd5709e361a3b67cb85 SHA1 130f118bc492a84e62fff978a0e4c3c36f9c5cf0 SHA256 24f6443f1f4723123fcdfd772d76aab4ec149985bf82c2e5688e1b7ee54813bd
+EBUILD kontrolpack-9999.ebuild 975 RMD160 32e8908ee43bc1edf2617d5d911746635ce3da6f SHA1 c34d91c1e5b39feaed10b4ca9af4bb55b73ce28f SHA256 b11ad3ded12795162c2a310bc5840cf3a71eb2ab74a924e25eb59131f206e586
+MISC ChangeLog 935 RMD160 cc1f3cabb2e8e4018f5aee8076cc5e6872b5d117 SHA1 fb967b8236aafaffe74e30a5c43ce2108aa2538f SHA256 e228f7b943e32ab1da8702277f9405917278c91bfe2cda9b07c5f49fe0d28980
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
