@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kontrolpack-9999 (16 Aug 2009)
+
+  16 Aug 2009; Dominik Kapusta <d@ayoy.net> +kontrolpack-9999.ebuild:
+  Added live ebuild
+
 *kontrolpack-2.0.3 (12 Aug 2009)
 
   12 Aug 2009; Dominik Kapusta <d@ayoy.net> -kontrolpack-2.0.2-r1.ebuild,
